# typescript-language-server

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.cursor/rules/: branch-scope.mdc  git-workflow.mdc  no-verify.mdc
.githooks/: commit-msg  install.sh  pre-commit  pre-push  uninstall.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: branch-protection.yml  ci.yml  release.yml
benches/: analysis.rs  parsing.rs
benchmarks/: README.md  run-benchmarks.sh
benchmarks/fixtures/: medium.ts  small.ts
benchmarks/scripts/: benchmark-lsp.mjs  generate-fixtures.mjs  package.json
editors/vscode/: .eslintrc.json  .vscodeignore  README.md  package.json  tsconfig.json  vitest.config.mts
editors/vscode/src/: extension.mts  extension.ts  server-download.mts  utils.mts  utils.test.mts
src/: document.rs  main.rs  parser.rs  server.rs
src/analysis/: binder.rs  mod.rs  scope.rs  symbol.rs  symbol_table.rs
src/capabilities/: code_actions.rs  completions.rs  definition.rs  diagnostics.rs  folding.rs  hover.rs  inlay_hints.rs  mod.rs  references.rs  rename.rs  selection_range.rs  semantic_tokens.rs  signature_help.rs  symbols.rs  type_diagnostics.rs
src/project/: file_graph.rs  mod.rs  project.rs  workspace.rs
src/resolution/: mod.rs  node_modules.rs  resolver.rs  tsconfig.rs
src/types/: checker.rs  mod.rs  printer.rs  types.rs
