[package]
name = "typescript-language-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tower-lsp = "0.20"
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tokio = { version = "1", features = ["full"] }
dashmap = "6"
bitflags = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"
tokio-test = "0.4"

[[bench]]
name = "parsing"
harness = false

[[bench]]
name = "analysis"
harness = false
