[package]
name = "typescript-language-server"
version = "0.1.0"
edition = "2024"
authors = ["Joseph R. Quinn"]
description = "A high-performance TypeScript and JavaScript language server implemented in Rust"
license = "MIT"
repository = "https://github.com/quinnjr/typescript-language-server"
homepage = "https://github.com/quinnjr/typescript-language-server"
documentation = "https://docs.rs/typescript-language-server"
readme = "README.md"
keywords = ["typescript", "javascript", "lsp", "language-server", "ide"]
categories = ["development-tools", "text-editors"]
rust-version = "1.85"

[dependencies]
tower-lsp = "0.20"
tree-sitter = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.25"
tokio = { version = "1", features = ["full"] }
dashmap = "6"
bitflags = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3"
tokio-test = "0.4"

[[bench]]
name = "parsing"
harness = false

[[bench]]
name = "analysis"
harness = false
